<resources>
    <string name="app_name">Mazano</string>
    <string name="games">Games</string>
    <string name="movies">Movies</string>
    <string name="settings">Settings</string>
    <string name="series">Series</string>
    <string name="search">Search</string>
    <string name="mazano_logo">Mazano logo</string>
    <!-- Auth -->
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="comedy">Comedy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Year">Year</string>
    <string name="Year_example">2020</string>
    <string name="time">Time</string>
    <string name="time_example">2 h 20 min</string>
    <string name="film_description">Description:</string>
    <string name="text_example">Vin Diesel’s Dominic Toretto is leading a quiet life off the grid with Letty and his son.Vin Diesel’s Dominic Toretto is leading a quiet life off the grid with Letty and his son.Vin Diesel’s Dominic Toretto is leading a quiet life off the grid with Letty and his son.Vin Diesel’s Dominic Toretto is leading a quiet life off the grid with Letty and his son.Vin Diesel’s Dominic Toretto is leading a quiet life off the grid with Letty and his son</string>
    <string name="name_example">Random film</string>
    <string name="film_head_image">film_head_image</string>
    <string name="play_button">play_button</string>
    <string name="back_button">back_button</string>
    <string name="favorite_button">favorite_button</string>
    <string name="year">Year</string>
    <string name="description">Description:</string>
    <string name="saved">Saved</string>
    <string name="welcomeSeries1">And finally here you can find</string>
    <string name="welcomeSeries2">TV series</string>
    <string name="welcomeSeries4">the</string>
    <string name="welcomeSeries3">that you enjoy!</string>
    <string name="getStarted">Get started</string>
    <string name="welcomeGames1">And also here you can find</string>
    <string name="welcomeGames2">the</string>
    <string name="welcomeGames3">game</string>
    <string name="welcomeGames4">you need!</string>
    <string name="welcomeMovies1">Here you can find the</string>
    <string name="welcomeMovies2">movie</string>
    <string name="welcomeMovies3">you need and watch it with \n great pleasure</string>
    <string name="welcomeMazano">Welcome to</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>


</resources>